# apps/docs/public/openapi/cyclist-profile.json
@@ -116,6 +116,10 @@
                           }
                         ]
                       },
+                      "coordinates": {
+                        "type": "string",
+                        "nullable": true
+                      },
                       "created_at": {
                         "type": "string"
                       },
@@ -127,6 +131,7 @@
                       "id",
                       "data",
                       "metadata",
+                      "coordinates",
                       "created_at",
                       "updated_at"
                     ]
@@ -233,6 +238,10 @@
                         }
                       ]
                     },
+                    "coordinates": {
+                      "type": "string",
+                      "nullable": true
+                    },
                     "created_at": {
                       "type": "string"
                     },
@@ -244,6 +253,7 @@
                     "id",
                     "data",
                     "metadata",
+                    "coordinates",
                     "created_at",
                     "updated_at"
                   ]
